# torch-mlir

./: .gitignore  CMakeLists.txt  CMakePresets.json  requirements.txt  t.sh
_demos/: t0.lit.sh
include/torch-mlir/Conversion/TorchOnnxToTorch/: Patterns.h
include/torch-mlir/Dialect/Torch/IR/: TorchOps.td
issues/onnx_slice/: README.md  fx_import.py  slice_op.fx_import.mlir  slice_op.fx_import.mlir.iree.vmfb  slice_op.fx_import.mlir.stablehlo.mlir  slice_op.onnx  slice_op.onnx.mlir  slice_op.onnx.mlir.torch.mlir  slice_op.py
issues/onnx_slice_2/: fx_import.py  slice_op.py  t.sh
issues/swin_t/: swin.sh  swin_opset_cvt.py  swin_shape_infer.py  swin_slice_opt.py
lib/Conversion/TorchOnnxToTorch/: DefaultDomainAtoF.cpp  DefaultDomainGtoP.cpp  DefaultDomainQtoZ.cpp
lib/Dialect/Torch/IR/: TorchOps.cpp
python/torch_mlir/extras/: onnx_importer.py
test/: CMakeLists.txt
test/Conversion/TorchOnnxToTorch/: simple_ops_g_to_p.mlir  simple_ops_q_to_z.mlir
test/Dialect/Torch/: canonicalize.mlir
tools/: CMakeLists.txt
tools/dummy-opt/: CMakeLists.txt  dummy-opt.cpp  dummy-pass.cpp  dummy-pass.h  dummy.mlir  t.sh
